--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,6 +19,7 @@
   <servlet-mapping>
     <servlet-name>springmvc</servlet-name>
     <url-pattern>*.html</url-pattern>
+    <url-pattern>/api/*</url-pattern>
   </servlet-mapping>
 
   <listener>
